<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_setting">Settings</string>

    <string name="pref_sort_order_key" translatable="false">pref_sort_order_key</string>
    <string name="pref_sort_order_title">Movie Sort order</string>
    <string-array name="pref_sort_order_entries">
        <item>most popular</item>
        <item>top rated</item>
        <item>favourite</item>
    </string-array>
    <string-array name="pref_sort_order_values">
        <item>most popular movies</item>
        <item>top rated movies</item>
        <item>favourite</item>
    </string-array>

    <string name="pref_sort_order_most_popular_value">most popular movies</string>
    <string name="pref_sort_order_top_rated_value">top rated movies</string>
    <string name="pref_sort_order_favourite_value">favourite</string>
    <string name="title_activity_detail">Movies Details</string>
    <string name="released_on">Released on:</string>
    <string name="original_language">Original language:</string>
    <string name="rating">Rating:</string>

    <string name="total_pages_key">total_pages_key</string>
    <string name="current_page_key">current_page_key</string>
    <string name="like">like</string>
    <string name="reviews">Reviews</string>

</resources>
