<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_image" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backdrop"
            app:srcCompat="@drawable/placeholder_image" />

        <TextView
            android:id="@+id/released_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/released_on"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/language_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/original_language"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/released_date_value" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/poster"
            tools:text="Description" />

        <TextView
            android:id="@+id/released_date_value"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/released_date_textView"
            tools:text="TextView" />

        <TextView
            android:id="@+id/lanaguage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/language_textview"
            app:layout_constraintTop_toBottomOf="@+id/released_date_value"
            tools:text="TextView" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/backdrop"
            tools:text="TextView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:text="6.5/10" />

        <ImageView
            android:id="@+id/favourite"
            android:layout_width="35dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_favorite_grey_400_24dp"
            app:layout_constraintStart_toEndOf="@+id/vote_average"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <LinearLayout
            android:id="@+id/reviewsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/description_textView"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reviews"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>